Added GET method in OpenApi contract
